@@ -51,7 +51,8 @@ Version 0.5
 - removed `FileStorage.__len__` which previously made the object
   falsy for browsers not sending the content length which all browsers
   do.
-- :class:`SharedDataMiddleware` uses `wrap_file` now.
+- :class:`SharedDataMiddleware` uses `wrap_file` now and has a
+  configurable cache timeout.
 
 Version 0.4.1
 -------------
